--- a/aura-base/client/src/components/StatsCards.css
+++ b/aura-base/client/src/components/StatsCards.css
@@ -22,28 +22,29 @@
 }
 
 .stat-circle {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
-  border: 3px solid;
+  border: 5px solid;
   position: relative;
 }
 
 .stat-value {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.25rem;
+  font-weight: 700;
   line-height: 1;
   margin-bottom: 0.25rem;
 }
 
 .stat-icon {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   line-height: 1;
+  margin-top: 0.25rem;
 }
 
 .stat-label-group {
@@ -52,13 +53,14 @@
 
 .stat-label-title {
   color: #6c757d;
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-bottom: 0.25rem;
+  font-weight: 600;
 }
 
 .stat-label-name {
-  font-weight: 500;
-  font-size: 0.9rem;
+  font-weight: 700;
+  font-size: 1.3rem;
 }
 
 /* Circle styles */
@@ -89,16 +91,16 @@
 /* Responsive adjustments */
 @media (max-width: 1200px) {
   .stat-circle {
-    width: 90px;
-    height: 90px;
+    width: 200px;
+    height: 200px;
   }
   
   .stat-value {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
   
   .stat-icon {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
   }
 }
 
